randauto algo done

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -16,9 +16,42 @@
 \usepackage{csquotes}
 \usepackage{verbatim}
 \usepackage{minted}
+\usepackage{listings}
 \usepackage[ruled,vlined]{algorithm2e}
 
 \usemintedstyle{fruity}
+
+\definecolor{mygreen}{rgb}{0,0.6,0}
+\definecolor{mygray}{rgb}{0.5,0.5,0.5}
+\definecolor{mymauve}{rgb}{0.58,0,0.82}
+
+\lstset{
+  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}; should come as last argument
+  basicstyle=\ttfamily,        % the size of the fonts that are used for the code
+  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
+  breaklines=true,                 % sets automatic line breaking
+  captionpos=b,                    % sets the caption-position to bottom
+  commentstyle=\color{mygreen},    % comment style
+  deletekeywords={...},            % if you want to delete keywords from the given language
+  escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
+  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+  frame=single,                    % adds a frame around the code
+  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+  keywordstyle=\color{blue},       % keyword style
+  %language=Octave,                 % the language of the code
+  morekeywords={*,...},            % if you want to add more keywords to the set
+  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+  numbersep=5pt,                   % how far the line-numbers are from the code
+  numberstyle=\tiny\color{mygray}, % the style that is used for the line-numbers
+  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+  showstringspaces=false,          % underline spaces within strings only
+  showtabs=false,                  % show tabs within strings adding particular underscores
+  stepnumber=2,                    % the step between two line-numbers. If it's 1, each line will be numbered
+  stringstyle=\color{mymauve},     % string literal style
+  tabsize=2,                       % sets default tabsize to 2 spaces
+  title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
+}
 
 \title{Binary Space Partitions}
 \author{Carlos Requena López}
@@ -71,15 +104,22 @@ We define the algorithm RandAutopart in \ref{algo}
   \KwOut{The autopartition binary tree}
 
   \nl Pick a random permutation of S and take the first element\;
-  \nl Create a node with this element in the tree.
-\item
-  \nl \While{there is a partition with at least 1 segment}{
-
-  };
-  \nl
+  \nl Extend this element into a line and create a node with it in the tree\;
+  \nl Filter the segments strictly to the left in the \texttt{left}
+  child\;
+  \nl Filter the segments strictly to the right in the \texttt{right}
+  child\;
+  \nl \For{segment in all segments that intersect}{
+    \nl add its subsegment laying on the left part to the
+    \texttt{left} child\;
+    \nl add its subsegment laying on the right part to the
+    \texttt{right} child\;
+  }
+  \nl \While{\texttt{left} or \texttt{right} have segments in them}{
+    \nl Repeat this procedure recursively on both sets\;
+  }
 \caption{\bf RandAutopart}
 \label{algo}
-
 \end{algorithm}
 
 The upper bound found in literature \cite{Motwani:1995:RA:211390},
@@ -128,9 +168,41 @@ Clojure uses a \texttt{Ratio} type to make arithmetic calculations as
 exact as possible at the expense of performance, which is not an
 issue.
 
-Nonetheless, for the sake of simplicity and to avoid clutter, this
-implementation is not exempt of errors that could arise due to
-degenerate or special cases though.
+In addition to this, this implementation tries to handle degenerate
+and special cases as much as possible (colinear segments,
+segment-on-segment, vertical segments, out-of-bounds segments, segment
+of size 0 - a point, etc).
+
+For example, for the input shown in figure \ref{fig:sample-input} the
+corresponding partition tree is the following (there are no
+intersections in this case):
+
+\begin{lstlisting}[frame=single]
+"BSpace partitions"
+{:seg {:a {:x 492, :y 556}, :b {:x 388, :y 932}},
+ :left
+ {:seg {:a {:x 625, :y 409}, :b {:x 530, :y 745}},
+  :left (),
+  :right
+  {:seg {:a {:x 626, :y 355}, :b {:x 588, :y 243}},
+   :left (),
+   :right ()}},
+ :right
+ {:seg {:a {:x 264, :y 626}, :b {:x -8, :y 571}},
+  :left (),
+  :right
+  {:seg {:a {:x 88, :y 291}, :b {:x 36, :y 79}},
+   :left (),
+   :right ()}}}
+\end{lstlisting}
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[width=0.7\textwidth]{img/sample-input.png}
+  \caption{Five random segments on a 720x720 canvas}
+  \label{fig:sample-input}
+\end{figure}
+
 
 \section{Results}
 
