add page number reference
picture in readme

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -111,7 +111,7 @@ in Eq. \ref{eq:upper-bound}.
 \end{equation}
 
 This upper bound found in the literature, specifically in
-\cite{Motwani:1995:RA:211390}, corresponds to the upper bound of the
+\cite[p.~14]{Motwani:1995:RA:211390}, corresponds to the upper bound of the
 random algorithm for any input. The expectation would be for this
 boundary to be closer when choosing the worst possible input (segment
 positioning wise) and further away when adding randomness to the input
